# update_all_forks

./: README.md  build2.sh  config_default.toml  main.py  pyproject.toml
pages/public/img/: README.md
